adjusted headshot's height again to fix how it looks on iphone

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -130,7 +130,7 @@
             margin-top: -40px;
             border-radius: 35px;
             max-width: 50%;
-            max-height: 50%;
+            height: 200px;
         }
     }
 
@@ -144,6 +144,7 @@
     .projectInfo {
         h3 {
             font-size: 1rem;
+            text-align: center;
         }
         p {
             font-size: 0.8rem;
