--- a/styles/style.css
+++ b/styles/style.css
@@ -744,7 +744,7 @@ footer p {
     margin-top: -40px;
     border-radius: 35px;
     max-width: 50%;
-    max-height: 50%;
+    height: 200px;
   }
   .projects img {
     width: 200px;
@@ -752,6 +752,7 @@ footer p {
   }
   .projectInfo h3 {
     font-size: 1rem;
+    text-align: center;
   }
   .projectInfo p {
     font-size: 0.8rem;
